--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -65,6 +65,12 @@
     text-align: center;
 }
 
+@media (max-width: 359px) {
+  .introText{
+    font-size: 20px;
+  }
+}
+
 @media (max-width: 767px) { 
   
   .intro{
